<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_subjects"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/subjects" />

        <item
            android:id="@+id/nav_register_exam"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/register_exam" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@android:drawable/ic_menu_month"
            android:title="@string/calendar" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/profile" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/settings" />

            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about_app" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/logout_account" />
        </menu>
    </item>
</menu>
