<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_subjects"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/subjects" />

    <item
        android:id="@+id/navigation_study"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/study" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@android:drawable/ic_menu_month"
        android:title="@string/calendar" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>
